environments/kc-dev/apps/app-eda-kc-order-cmd-mq/services/eda-kc-order-cmd-mq/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: eda-kc-order-cmd-mq
    app.kubernetes.io/part-of: app-eda-kc-order-cmd-mq
  name: eda-kc-order-cmd-mq
  namespace: kc-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eda-kc-order-cmd-mq
      app.kubernetes.io/part-of: app-eda-kc-order-cmd-mq
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: eda-kc-order-cmd-mq
        app.kubernetes.io/part-of: app-eda-kc-order-cmd-mq
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: eda-kc-order-cmd-mq
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
