environments/kc-dev/apps/app-eda-kc-order-cmd-mq/services/eda-kc-order-cmd-mq/base/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-kc-order-cmd-mq.git
  labels:
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/name: eda-kc-order-cmd-mq
  name: eda-kc-order-cmd-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.1
      app.kubernetes.io/name: eda-kc-order-cmd-mq
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-kc-order-cmd-mq.git
      labels:
        app.kubernetes.io/version: 0.0.1
        app.kubernetes.io/name: eda-kc-order-cmd-mq
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -Djavax.net.ssl.trustStoreType=jks
        - -Djavax.net.ssl.trustStore=/deployments/certs/mq-tls/mq-tls.jks
        - -Djavax.net.ssl.trustStorePassword=my-mq-password
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-kc-order-ms-mq
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: store-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: kc-sa
