environments/kc-dev/apps/app-eda-kc-order-cmd-mq/services/eda-kc-order-cmd-mq/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: eda-kc-order-cmd-mq
    app.kubernetes.io/part-of: app-eda-kc-order-cmd-mq
  name: eda-kc-order-cmd-mq
  namespace: kc-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: eda-kc-order-cmd-mq
    app.kubernetes.io/part-of: app-eda-kc-order-cmd-mq
status:
  loadBalancer: {}
