environments/kc-dev/apps/app-eda-kc-order-cmd-mq/services/eda-kc-order-cmd-mq/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: eda-kc-order-cmd-mq
  namespace: kc-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: eda-kc-order-cmd-mq
    weight: 100
  wildcardPolicy: None
